@@ -97,6 +97,10 @@
         <label>Show _comment window</label>
         <checkable>1</checkable>
       </object>
+      <object class="wxMenuItem" name="menu_auto_comments_win">
+        <label>Show automatic c_omments window</label>
+        <checkable>1</checkable>
+      </object>
       <object class="wxMenuItem" name="menu_shaded">
         <label>_Shaded translations list</label>
         <checkable>1</checkable>
