@@ -4,6 +4,7 @@ Version 1.3.2
 
 - fixed bogus warnings when updating from a POT file
 - added "New catalog from POT file" feature
+- added ability to display automatic comments in the UI (Olivier Sannier)
 - added more translations:
      Korean (Hojin Choi)
      Hebrew (Nir Lavi)
